fix: made images align correctly again

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -127,6 +127,8 @@ nav {
 
 #information #information__preview {
   width: 75%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #information #information__content {
